# mutagen

./: .env.local.example  .gitignore  README.md  asset_prompts.md  context.md  crop_sprites.py  deployment.md  mermaid.md  naration.md  package-lock.json  package.json  prompt.md  submission.md  threads.md  tsconfig.json
deploy/: nginx-mutagen-relayer.conf
mutagen-contract/: Cargo.toml
mutagen-contract/.cargo/: config.toml
mutagen-contract/artifacts/: checksums.txt  mutagen_contract.wasm
mutagen-contract/src/: auditor.rs  contract.rs  error.rs  execute.rs  lib.rs  loot.rs  msg.rs  query.rs  specimen.rs  state.rs
mutagen-contract/tests/: integration.rs
public/: contract.json
relayer/: .env.example  ecosystem.config.cjs  package-lock.json  package.json
relayer/src/: config.ts  cors.ts  index.ts  logger.ts  oracle.ts  server.ts  state.ts  utils.ts  verify.ts
relayer/src/ai/: auditor.ts  regime-classifier.ts
relayer/src/contract/: client.ts
relayer/src/hub/: bonded-ratio.ts  gov-activity.ts  ibc-volume.ts
scripts/: deploy.ts  e2e-verify.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/how-it-works/: page.tsx
src/app/lab/: page.tsx
src/app/merge/: page.tsx
src/app/mutations/: page.tsx
src/app/notebook/: page.tsx
src/app/raid/: page.tsx
src/components/lab/: HubPulsePanel.tsx  (+5 more)
src/lib/: assets.ts  bgm.ts  contract.ts  cosmoshub-chain.ts  cosmoshub-testnet-chain.ts  experiment-store.ts  hooks.ts  judge-content.ts  lab-sounds.ts  loot-table.ts  mock-contract.ts  raid-sounds.ts  relayer-client.ts  types.ts
(+26 files in other folders)
