[package]
name = "mutagen-contract"
version = "0.1.0"
edition = "2021"
description = "MUTAGEN chain-driven gacha on Cosmos Hub testnet"
authors = ["MUTAGEN Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "1.5.11"
cosmwasm-std = { version = "1.5.11", features = ["staking"] }
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.22"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
thiserror = "1.0.69"

[dev-dependencies]
cw-multi-test = "1.2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
